@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Don&apos;t set References header in reply message if equal to In-Reply-To header (RFC 5322 [3.6.4]).
 * [mms] Add configurable IMAP quota checking interval (Request #12907).
 * [mms] Honor &apos;from_link&apos; preference in dynamic view.
 * [mms] Add support for storing image data within HTML signatures.
