@@ -2,6 +2,8 @@
 v6.2.0-git
 ----------
 
+[mms] Don't set References header in reply message if equal to In-Reply-To
+      header (RFC 5322 [3.6.4]).
 [mms] Add configurable IMAP quota checking interval (Request #12907).
 [mms] Honor 'from_link' preference in dynamic view.
 [mms] Add support for storing image data within HTML signatures.
